--- a/EcomApp/src/app/pages/payment/payment.component.html
+++ b/EcomApp/src/app/pages/payment/payment.component.html
@@ -1,3 +1,4 @@
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <main class="lg:flex lg:min-h-full lg:flex-row-reverse lg:overflow-hidden">
     <div class="px-4 py-6 sm:px-6 lg:hidden">
         <div class="mx-auto flex max-w-lg">
@@ -23,7 +24,6 @@
                                 <p class="text-gray-900">{{ product.price }} CHF</p>
                             </div>
                             <div class="flex space-x-4">
-                                <button type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Modifier</button>
                                 <div class="flex border-l border-gray-300 pl-4">
                                     <button (click)="deleteProduct(product.id)" type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Supprimer</button>
                                 </div>
@@ -56,109 +56,99 @@
     <section aria-labelledby="payment-heading" class="flex-auto overflow-y-auto px-4 pb-16 pt-12 sm:px-6 sm:pt-16 lg:px-8 lg:pb-24 lg:pt-0">
         <div class="mx-auto max-w-lg">
             <div class="hidden pb-16 pt-10 lg:flex">
-            <a href="#">
-                <span class="sr-only">Prime</span>
-            </a>
+                <a href="#">
+                    <span class="sr-only">Prime</span>
+                </a>
             </div>
     
-            <button type="button" class="flex w-full items-center justify-center rounded-md border border-transparent bg-black py-2 text-white hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-900 focus:ring-offset-2">
-            <span class="sr-only">Payer avec Apple Pay</span>
-            <svg class="h-5 w-auto" fill="currentColor" viewBox="0 0 50 20">
-                <path d="M9.536 2.579c-.571.675-1.485 1.208-2.4 1.132-.113-.914.334-1.884.858-2.484C8.565.533 9.564.038 10.374 0c.095.951-.276 1.884-.838 2.579zm.829 1.313c-1.324-.077-2.457.751-3.085.751-.638 0-1.6-.713-2.647-.694-1.362.019-2.628.79-3.323 2.017-1.429 2.455-.372 6.09 1.009 8.087.676.99 1.485 2.075 2.552 2.036 1.009-.038 1.409-.656 2.628-.656 1.228 0 1.58.656 2.647.637 1.104-.019 1.8-.99 2.475-1.979.771-1.122 1.086-2.217 1.105-2.274-.02-.019-2.133-.828-2.152-3.263-.02-2.036 1.666-3.007 1.742-3.064-.952-1.408-2.437-1.56-2.951-1.598zm7.645-2.76v14.834h2.305v-5.072h3.19c2.913 0 4.96-1.998 4.96-4.89 0-2.893-2.01-4.872-4.885-4.872h-5.57zm2.305 1.941h2.656c2 0 3.142 1.066 3.142 2.94 0 1.875-1.142 2.95-3.151 2.95h-2.647v-5.89zM32.673 16.08c1.448 0 2.79-.733 3.4-1.893h.047v1.779h2.133V8.582c0-2.14-1.714-3.52-4.351-3.52-2.447 0-4.256 1.399-4.323 3.32h2.076c.171-.913 1.018-1.512 2.18-1.512 1.41 0 2.2.656 2.2 1.865v.818l-2.876.171c-2.675.162-4.123 1.256-4.123 3.159 0 1.922 1.495 3.197 3.637 3.197zm.62-1.76c-1.229 0-2.01-.59-2.01-1.494 0-.933.752-1.475 2.19-1.56l2.562-.162v.837c0 1.39-1.181 2.379-2.743 2.379zM41.1 20c2.247 0 3.304-.856 4.227-3.454l4.047-11.341h-2.342l-2.714 8.763h-.047l-2.714-8.763h-2.409l3.904 10.799-.21.656c-.352 1.114-.923 1.542-1.942 1.542-.18 0-.533-.02-.676-.038v1.779c.133.038.705.057.876.057z" />
-            </svg>
-            </button>
-    
-            <div class="relative mt-8">
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                <div class="w-full border-t border-gray-200"></div>
-            </div>
-            <div class="relative flex justify-center">
-                <span class="bg-white px-4 text-sm font-medium text-gray-500">ou</span>
-            </div>
-            </div>
-    
-            <form class="mt-6">
-            <div class="grid grid-cols-12 gap-x-4 gap-y-6">
-                <div class="col-span-full">
-                <label for="email-address" class="block text-sm font-medium text-gray-700">Adresse Mail</label>
-                <div class="mt-1">
-                    <input type="email" id="email-address" name="email-address" autocomplete="email" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-full">
-                <label for="name-on-card" class="block text-sm font-medium text-gray-700">Nom sur la carte</label>
-                <div class="mt-1">
-                    <input type="text" id="name-on-card" name="name-on-card" autocomplete="cc-name" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-full">
-                <label for="card-number" class="block text-sm font-medium text-gray-700">Numéro de carte</label>
-                <div class="mt-1">
-                    <input type="text" id="card-number" name="card-number" autocomplete="cc-number" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-8 sm:col-span-9">
-                <label for="expiration-date" class="block text-sm font-medium text-gray-700">Date d'expiration (MM/YY)</label>
-                <div class="mt-1">
-                    <input type="text" name="expiration-date" id="expiration-date" autocomplete="cc-exp" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-4 sm:col-span-3">
-                <label for="cvc" class="block text-sm font-medium text-gray-700">CVC</label>
-                <div class="mt-1">
-                    <input type="text" name="cvc" id="cvc" autocomplete="csc" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-full">
-                <label for="address" class="block text-sm font-medium text-gray-700">Adresse</label>
-                <div class="mt-1">
-                    <input type="text" id="address" name="address" autocomplete="street-address" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-full sm:col-span-4">
-                <label for="city" class="block text-sm font-medium text-gray-700">Ville</label>
-                <div class="mt-1">
-                    <input type="text" id="city" name="city" autocomplete="address-level2" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-    
-                <div class="col-span-full sm:col-span-4">
-                <label for="region" class="block text-sm font-medium text-gray-700">Etat</label>
-                <div class="mt-1">
-                    <input type="text" id="region" name="region" autocomplete="address-level1" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
+            <form class="mt-6" [formGroup]="checkoutForm" (ngSubmit)="pay()">
+                <div class="grid grid-cols-12 gap-x-4 gap-y-6">
+                    <div class="col-span-full">
+                    <label for="email-address" class="block text-sm font-medium text-gray-700">Adresse Mail</label>
+                    <div class="mt-1">
+                        <input type="email" id="email-address" name="email-address" autocomplete="email" formControlName="email" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full">
+                    <label for="name-on-card" class="block text-sm font-medium text-gray-700">Nom sur la carte</label>
+                    <div class="mt-1">
+                        <input type="text" id="name-on-card" formControlName="cardName" name="name-on-card" autocomplete="cc-name" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full">
+                    <label for="card-number" class="block text-sm font-medium text-gray-700">Numéro de carte</label>
+                    <div class="mt-1">
+                        <input type="text" id="card-number" formControlName="cardNumber" name="card-number" autocomplete="cc-number" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-8 sm:col-span-9">
+                    <label for="expiration-date" class="block text-sm font-medium text-gray-700">Date d'expiration (MM/YY)</label>
+                    <div class="mt-1">
+                        <input type="text" formControlName="expirationDate" name="expiration-date" id="expiration-date" autocomplete="cc-exp" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-4 sm:col-span-3">
+                    <label for="cvc" class="block text-sm font-medium text-gray-700">CVC</label>
+                    <div class="mt-1">
+                        <input type="text" formControlName="cvc" name="cvc" id="cvc" autocomplete="csc" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full">
+                    <label for="address" class="block text-sm font-medium text-gray-700">Adresse</label>
+                    <div class="mt-1">
+                        <input type="text" id="address" formControlName="address" name="address" autocomplete="street-address" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full sm:col-span-4">
+                    <label for="city" class="block text-sm font-medium text-gray-700">Ville</label>
+                    <div class="mt-1">
+                        <input type="text" id="city" formControlName="city" name="city" autocomplete="address-level2" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full sm:col-span-4">
+                    <label for="region" class="block text-sm font-medium text-gray-700">Etat</label>
+                    <div class="mt-1">
+                        <input type="text" id="region" formControlName="region" name="region" autocomplete="address-level1" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
+
+                    <div class="col-span-full sm:col-span-4">
+                    <label for="postal-code" class="block text-sm font-medium text-gray-700">Code postale</label>
+                    <div class="mt-1">
+                        <input type="text" id="postal-code" formControlName="postalCode" name="postal-code" autocomplete="postal-code" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                    </div>
+                    </div>
                 </div>
     
-                <div class="col-span-full sm:col-span-4">
-                <label for="postal-code" class="block text-sm font-medium text-gray-700">Code postale</label>
-                <div class="mt-1">
-                    <input type="text" id="postal-code" name="postal-code" autocomplete="postal-code" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                </div>
-                </div>
-            </div>
-    
-            <div class="mt-6 flex space-x-2">
-                <div class="flex h-5 items-center">
-                <input id="same-as-shipping" name="same-as-shipping" type="checkbox" checked class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-                </div>
-                <label for="same-as-shipping" class="text-sm font-medium text-gray-900">L'adresse de factuation est similaire que celle de livraison</label>
-            </div>
-    
-            <button type="submit" class="mt-6 w-full rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Payer {{total}} CHF</button>
-    
-            <p class="mt-6 flex justify-center text-sm font-medium text-gray-500">
-                <svg class="mr-1.5 h-5 w-5 text-gray-400" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
-                </svg>
-                Détails de paiement stockés en texte brut
-            </p>
+                <button type="submit" [disabled]="checkoutForm.invalid || checkoutFormSubmitted" class="mt-6 w-full rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Payer {{total}} CHF</button>
+
+                <p class="mt-6 flex justify-center text-sm font-medium text-gray-500">
+                    <svg class="mr-1.5 h-5 w-5 text-gray-400" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+                    </svg>
+                    Détails de paiement stockés en texte brut
+                </p>
             </form>
         </div>
-        </section>
+    </section>
 </main>
+
+<div class="fixed inset-0 z-10 w-screen h-screen overflow-y-auto" *ngIf="isPopupOpen">
+    <div class="bg-gray-500 bg-opacity-75 transition-opacity"></div>
+    <div class="flex items-center justify-center min-h-full">
+        <div class="relative bg-white w-full max-w-lg p-6 rounded-lg shadow-xl">
+            <svg class="svgConfirm" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 130.2 130.2">
+                <circle class="path circle" fill="none" stroke="#73AF55" stroke-width="6" stroke-miterlimit="10" cx="65.1" cy="65.1" r="62.1"/>
+                <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="100.2,40.2 51.5,88.8 29.8,67.5 "/>
+            </svg>
+            <p class="success">Votre paiement a été confirmé avec succès!</p>     
+        </div>
+    </div>
+</div>
